capturando o target da tecla que está sendo clicada

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 body {
   background-color: rgb(4, 4, 32);
   color: #fff;
+  font-family: sans-serif;
   display: flex;
   align-items: center;
   height: 80vh;
