--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,14 @@ body {
   font-family: sans-serif;
   display: flex;
   align-items: center;
-  height: 80vh;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 section {
-  width: 40%;
+  width: 70%;
   min-width: 400px;
   border: solid 1px #3a3838;
   border-radius: 8px;
   padding: 0.4rem 0.3rem;
-  margin-left: 10rem;
 }
